--- a/thisistheapp/templates/layout.html
+++ b/thisistheapp/templates/layout.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="shortcut icon" href="{{url_for('static',filename='favicon.ico')}}" type="image/x-icon">
+    <link rel="icon" href="{{url_for('static',filename='favicon.ico')}}" type="image/x-icon">
     <title>Robotni - An Application for Plant Users</title>
+    <style>{% block style %}{% endblock %}</style>
 </head>
 <body>
     <div class="header">
         <a href="{{ url_for('index') }}" class="logo">Robotni</a>
         <div class="header-right">
-            <a class="active" href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('index') }}">Home</a>
             <a href="{{ url_for('plants') }}">Plants</a>
             {% if not current_user.is_authenticated %}
             <a href="{{ url_for('login') }}">Log in</a>
@@ -23,7 +27,9 @@
             {% endif %}
         </div>
     </div>
+    <div class="container">
     {% block body %}{% endblock %}
+    </div>
     {% block script %} {% endblock %}
 </body>
 </html>
