--- a/thisistheapp/templates/register.html
+++ b/thisistheapp/templates/register.html
@@ -1,12 +1,11 @@
 {% extends "layout.html" %}
-
 {% block body %}
 <div class="form">
     <h1>Register</h1>
     <form method="POST" action="/register">
         {{ form.csrf_token }}
         <p>
-            Username<br>
+            {{ form.username.label }}<br>
             {{ form.username(size=32) }}<br>
             {% for error in form.username.errors %}
             <span style="color: red;">[{{ error }}]</span>
@@ -33,7 +32,7 @@
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <input type="submit" value="Submit">
+        <input class="btn btn-outline-primary" type="submit" value="Sign Up">
     </form>
 </div>
 {% endblock %}
