--- a/thisistheapp/templates/layout.html
+++ b/thisistheapp/templates/layout.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="{{ url_for('index') }}" class="logo">Robotni</a>
+        <a href="{{ url_for('index') }}" class="logo"><strong>Robotni</strong></a>
         <div class="header-right">
             <a href="{{ url_for('index') }}">Home</a>
             <a href="{{ url_for('plants') }}">Plants</a>
